@@ -1,3 +1,8 @@
+2006-09-23 Yen-Ju Chen <yjchenx at gmail>
+
+	* Start to implement show and quit in contextual menu.
+	* Obtain command.
+
 2006-09-19 Yen-Ju Chen <yjchenx at gmail>
 
 	* Works better.
